# src/main/kotlin/pt/isel/ls/api/dto/board/GetOtherUsersResponse.kt
@@ -4,4 +4,4 @@ import kotlinx.serialization.Serializable
 import pt.isel.ls.api.dto.user.UserDTO
 
 @Serializable
-data class GetAllUsersResponse(val users: List<UserDTO>)
+data class GetOtherUsersResponse(val users: List<UserDTO>)
